Add option to retain connection // move delay